# musicbrainz-video-tracklist

./: .buildinfo  .codecov.yml  .dockerignore  .gitignore  404.html  CHANGELOG.org  Dockerfile  README.org  generate-tracklist  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docker-imager.yaml  docs-build-and-deploy.yaml  lint-and-check.yaml
_debug/: index.html
_sources/: index.rst.txt
_sources/api/: modules.rst.txt  musicbrainz_video_tracklist.main.rst.txt  musicbrainz_video_tracklist.rst.txt
api/: modules.html  musicbrainz_video_tracklist.html  musicbrainz_video_tracklist.main.html
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_static/: style.css
docs/source/_templates/: base.html  module.rst_t  package.rst_t
musicbrainz_video_tracklist/: __init__.py  main.py
src/: __init__.py  main.py
src/helper/: __init__.py  chapters.py  mkv.py  mp4.py
src/helpers/: __init__.py  chapters.py  mkv.py  mp4.py
tests/: test_chapters.py  test_fraction_to_float.py  test_sanitise_title.py
