[tool.poetry]
name = "musicbrainz-video-tracklist"
version = "1.0.0"
description = "Generate a tracklist of video recordings for MusicBrainz."
authors = ["Arif Er <arifer612@proton.me>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "musicbrainz_video_tracklist"}]

[tool.poetry.dependencies]
python = "^3.11"
ffprobe3-python3 = {git = "https://github.com/jboy/ffprobe3-python3"}

[tool.poetry.group.dev.dependencies]
epc = "^0.0.5"
sexpdata = "1.0.0"
importmagic = "^0.1.7"
pytest = "^8.0.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
packages = "musicbrainz_video_tracklist"

[tool.pylint]
